--- a/code/RxJS/example.html
+++ b/code/RxJS/example.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <script>
-            const { range, filter, map,from,groupBy,count,mergeMap,toArray,reduce } = rxjs;
+            const { range, filter, map,from,groupBy,count,mergeMap,toArray,reduce,of } = rxjs;
             let data=[1,2,2,3,3,3,3];
             from(data)
             .pipe(
