--- a/code/RxJS/ex2.html
+++ b/code/RxJS/ex2.html
@@ -1,32 +1,31 @@
-<thml>
-    <head>
-        <script src="https://unpkg.com/rxjs@^7/dist/bundles/rxjs.umd.min.js"></script>
-    </head>
-    <body>
-       <script>
-         const { range, filter, map,from,groupBy,count,mergeMap,merge,toArray,reduce,of,delay,concatMap,
-                interval,observeOn,asyncScheduler,queueScheduler,zip ,bufferTime,Subject,Observable,
-                } = rxjs;
-        
-        const add=(x1,x2)=>{
-            return new Promise((resolve,reject)=>{
-                resolve(x1+x2);
-            })
-        };
-        const dd=(x)=>{
-            return new Promise((resolve,reject)=>{
-                resolve(x*2);
-            })
-        };
+<html>
+  <head>
+    <script src="https://unpkg.com/rxjs@^7/dist/bundles/rxjs.umd.min.js"></script>
+  </head>
+  <body>
+    <script>
+        const { range, filter, map,from,groupBy,count,mergeMap,merge,toArray,reduce,of,delay,concatMap,
+               interval,observeOn,asyncScheduler,queueScheduler,zip ,bufferTime,Subject,Observable,
+               } = rxjs;
 
-       of(add(10,2),dd(7))
-       .pipe(
-        map(x=>await x.then((r)=>r))
-       )
-       .subscribe(x=>{
-        console.log(x)
-       })
-        
-       </script>
-    </body>
+       const add=(x1,x2)=>{
+           return new Promise((resolve,reject)=>{
+               resolve(x1+x2);
+           })
+       };
+       const dd=(x)=>{
+           return new Promise((resolve,reject)=>{
+               resolve(x*2);
+           })
+       };
+
+      of(add(10,2),dd(7))
+      .pipe(
+       map(x=>await x.then((r)=>r))
+      )
+      .subscribe(x=>{
+       console.log(x)
+      })
+    </script>
+  </body>
 </html>
