--- a/code/RxJS/ex5.html
+++ b/code/RxJS/ex5.html
@@ -28,20 +28,27 @@
         Observable,
         retry,
         throwError,
+        exhaustMap,
       } = rxjs;
 
-      const obj1 = { name: "airmanx", age: 10, height: 200 };
-      const obj2 = { x: "airmanx", y: 10, z: 200 };
+      const obj1 = [2, 3, 4, 5, 6, 7, 8, 9];
+      const obj2 = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
-      of(obj1, obj2)
-        .pipe(concatMap((b) => from(Object.keys(b))))
-        .subscribe((x) => {
-          console.log(x);
+      for (let i = 0; i < obj1.length; i++) {
+        for (let j = 0; i < obj2.length; j++) {
+          console.log(`${obj1[i]}*${obj2[j]}=${obj1[i] * obj2[j]}`);
+        }
+      }
+
+      from(obj1)
+        .pipe(
+          concatMap((o1) =>
+            from(obj2).pipe(map((o2) => `${o1}*${o2}=${o1 * o2}`))
+          )
+        )
+        .subscribe((c) => {
+          console.log(c);
         });
-
-      of(1, 2, 3).subscribe((c) => {
-        console.log(c);
-      });
 
       console.log("complete");
     </script>
