--- a/html/debounced.html
+++ b/html/debounced.html
@@ -1,29 +1,37 @@
 <html>
-<header>
+  <header>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-</header>
+    <script src=" https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js "></script>
+    <script src="https://cdn.jsdelivr.net/g/lodash@4(lodash.min.js+lodash.fp.min.js)"></script>
+  </header>
 
-<body>
+  <body>
     <script>
-        $(document).ready(function () {
-            let timeId = undefined;
-            
-            let wrapper = function (delay, callback) {
-                !!timeId && clearTimeout(timeId);
-                timeId = setTimeout(callback, delay);
-            }
+      $(document).ready(function () {
+        let timeId = undefined;
+        const test = _.compose(
+          (x) => x + 1,
+          (x) => x + 2,
+          (x) => x * 3
+        );
+        console.log(test(9));
 
-            $("#button").click(() => wrapper(1000, function () {
-                console.log('this is click');
-            }))
+        let wrapper = function (delay, callback) {
+          !!timeId && clearTimeout(timeId);
+          timeId = setTimeout(callback, delay);
+        };
 
-            $.get("http://localhost:5080/WeatherForecast/test",(res)=>{
-                console.log(res);
-            })
+        $("#button").click(() =>
+          wrapper(1000, function () {
+            console.log("this is click");
+          })
+        );
 
-        })
+        $.get("http://localhost:5080/WeatherForecast/test", (res) => {
+          console.log(res);
+        });
+      });
     </script>
     <input id="button" type="button" value="click me" />
-</body>
-
+  </body>
 </html>
