--- a/html/composeExample.html
+++ b/html/composeExample.html
@@ -1,25 +1,25 @@
 <html>
   <header>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src=" https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js "></script>
-    <script src="https://cdn.jsdelivr.net/g/lodash@4(lodash.min.js+lodash.fp.min.js)"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.26.0/ramda.min.js"></script>
   </header>
 
   <body>
+    <span>value:</span>
+    <span id="val"></span>
     <script>
-      $(document).ready(function () {
-        const remainder = (x) => x % 2
-        const square = (x) => x * x;
-        
+      const add = (x, y) => x + y;
+      const square = (x) => x * x;
+      const half = (x) => x / 2;
 
-        let timeId = undefined;
-        const test = _.compose(
-          (x) => x + 1,
-          (x) => x + 2,
-          (x) => x * 3
-        );
-      });
+      const method0 = (x, y) => {
+        return half(square(add(x, y)));
+      };
+
+      const method1 = (x, y) => {
+        return R.compose(half, square, add)(x, y);
+      };
+
+      document.getElementById("val").innerHTML = method1(2, 3);
     </script>
-    <input id="button" type="button" value="click me" />
   </body>
 </html>
