--- a/html/composeExample.html
+++ b/html/composeExample.html
@@ -8,7 +8,9 @@
     <span id="val"></span>
     <script>
       const add = async (x, y) => x + y;
-      const square = async (x) => x * x;
+      const square = async (x) => {
+        throw new Error("not implemented");
+      };
       const half = async (x) => x / 2;
 
       // 命令式寫法
@@ -28,9 +30,15 @@
       // Ramda 函數式寫法
       const method2 = async (x, y) => R.composeP(half, square, add)(x, y);
 
-      method2(2, 3).then((result) => {
-        document.getElementById("val").innerHTML = result;
-      });
+      method2(2, 3)
+        .then((result) => {
+          debugger;
+          document.getElementById("val").innerHTML = result;
+        })
+        .catch((err) => {
+          debugger;
+          document.getElementById("val").innerHTML = err;
+        });
 
       //document.getElementById("val").innerHTML = method2(2, 3);
     </script>
