Update WebSocket URL to use port 7163

--- a/html/websocket.html
+++ b/html/websocket.html
@@ -1,7 +1,8 @@
 <html>
     <body>        
         <script>          
-            var ws = new WebSocket("wss://localhost:7275/ws?userid=airmanx&sysname=workflow");
+            //var ws = new WebSocket("wss://localhost:7163/ws?userid=airmanx&sysname=workflow");
+            var ws = new WebSocket("wss://localhost:7163/ws?userid=airmanx&sysname=workflow");
             
             ws.onopen = function() {
                 ws.send("Hello, world");
