feat: 新增 RSA 加密示例頁面，展示使用 JSEncrypt 進行加密的基本功能

--- a/html/ramda1.html
+++ b/html/ramda1.html
@@ -12,7 +12,11 @@
 
       document.getElementById("val").innerHTML = fun1;
 
-      
+      const getState = (score) =>
+        R.pipe(Math.sqrt, R.multiply(R.__, 2), R.ifElse(R.gte(R.__, 60), R.always("及格"), R.always("不及格")))(score);
+
+      console.log(getState(50)); // "及格"
+      console.log(getState(20)); // "不及格"
     </script>
   </body>
 </html>
